--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "build": "npm run less && webpack",
-    "start": "npm run less && webpack && node server/index.js",
+    "start": "node server/index.js",
     "dev": "concurrently \"npm run less && webpack -w\" \"nodemon server\"",
     "less": "lessc src/css/style.less dist/css/style.css",
     "lint": "eslint .",
@@ -52,7 +52,7 @@
     "eslint-plugin-react": "^6.2.0",
     "eslint-plugin-standard": "^3.1.0",
     "file-loader": "^0.11.2",
-    "less": "^2.7.1",
+    "less": "^3.8.1",
     "less-plugin-autoprefix": "^1.5.1",
     "mocha": "^3.0.2",
     "react-addons-test-utils": "^15.6.0",
