--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run build && mocha test/.setup.js test/*.spec.js --exit"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.24.0",
     "bluebird": "^3.5.0",
     "chai": "^3.5.0",
     "expect": "^1.20.2",
@@ -21,12 +21,11 @@
     "lodash": "^4.17.10",
     "lodash-webpack-plugin": "^0.10.2",
     "morgan": "^1.9.0",
-    "nightmare": "^2.10.0",
+    "nightmare": "^2.8.0",
     "nightmare-react-utils": "^1.0.4",
-    "react": "^15.3.2",
+    "react": "^15.7.0",
     "react-dom": "^15.3.2",
-    "serve-favicon": "^2.5.0",
-    "webpack": "^3.6.0"
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.6.1",
@@ -36,11 +35,11 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.4.3",
     "chai-as-promised": "^5.3.0",
-    "chai-http": "^3.0.0",
+    "chai-http": "^4.3.0",
     "concurrently": "^3.6.0",
     "csx": "^4.0.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^5.3.0",
+    "enzyme": "^3.11.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-loopback": "^4.0.0",
     "eslint-config-standard": "^11.0.0",
@@ -54,11 +53,13 @@
     "file-loader": "^0.11.2",
     "less": "^3.8.1",
     "less-plugin-autoprefix": "^1.5.1",
-    "mocha": "^3.0.2",
-    "react-addons-test-utils": "^15.6.0",
+    "mocha": "^9.1.3",
+    "react-addons-test-utils": "^15.3.2",
     "sinon": "^1.17.6",
     "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.9"
+    "url-loader": "^4.1.1",
+    "webpack": "^2.1.0-beta.22",
+    "webpack-cli": "^4.9.1"
   },
   "repository": {
     "type": "git",
